force-app/main/default/objects/Siva_TestObject1__c/Siva_TestObject1__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Siva_TestObject1</label>
</CustomObject>