force-app/main/default/objects/Siva_TestObject1__c/fields/first_fullname__c.field-meta.xml
<CustomField>
    <fullName>first_fullname__c</fullName>
    <externalId>true</externalId>
    <label>First_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>