force-app/main/default/objects/Siva_TestObject1__c/fields/mandatory_number__c.field-meta.xml
<CustomField>
    <fullName>mandatory_number__c</fullName>
    <label>mandatory_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>