force-app/main/default/objects/Siva_TestObject1__c/fields/mandatory_text__c.field-meta.xml
<CustomField>
    <fullName>mandatory_text__c</fullName>
    <label>mandatory_text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>