force-app/main/default/objects/Siva_TestObject1__c/fields/mobile_number__c.field-meta.xml
<CustomField>
    <fullName>mobile_number__c</fullName>
    <label>mobile_number</label>
    <type>Phone</type>
</CustomField>